2008-04-30 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/goodie_msg.c: Added function

	  void fl_show_msg( const char * fmt, ... )

	The first argument is a printf-like format string,
	followed by as many arguments as required by the
	format specifiers in the format string. This simplfies
	outputting freely formatted messages.

	Changed fl_show_message() to avoid an upper limit
	of 2048 characters on the total length of the three
	strings passed to it.

	Added #defines for fl_hide_messages and fl_hide_msg -
	they are just alternative names for fl_hide_message().

2008-04-29 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/fselect.c: If a callback for a file selector is
	installed the prompt line and the input field aren't
	shown anymore. As Andrea Scopece pointed out the input
	field can't be used at all for file selectors with a
	callback (only a double click in the browser works)
	so it doesn't make sense to show it.

	* lib/n2a.c: This file isn't needed anymore - the only
	of its functions used at all, fl_itoa(), was used in only
	a single place (lib/errmsg.c) and got replaced by sprintf().

	* image/image_proc.c: Bug fixed in flimage_tint() that led
	to writes past the end of an array.

2008-04-28 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/forms.c: Jumping backwards with Shift-<TAB>
	through a set of input objects now works even if
	there are non-input objects in between.

	* demos/browserop.c: Bug removed that only surfaced
	now since clicking onto a button makes an input
	object lose the focus.

	* lib/canvas.c, lib/forms.c: On hiding a form it was
	forgotten to unmap the windows of canvases belonging
	to that form and to reset the ID of these windows.
	Resulted in an XError on unhiding the form. Thanks
	to Andrea Scopece for finding this bug.

2008-04-27 Jens Thoms Toerring    <jtt@toerring.de>

	* lib/input.c: Correct leap year handling in date input
	validator. Multi-line input field don't receive a <TAB>
	anymore (which never did work anyway).
